rules.v4
# Generated by iptables-save v1.8.11 (nf_tables) on Sun Sep 20 14:46:49 2026
*filter
:INPUT DROP [72:15959]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-t raw -A PREROUTING -p tcp -m u32 --u32 "0>>22&0x3C@12&0xFF=0" -j DROP
-t raw -A PREROUTING -p tcp -m u32 --u32 "0>>22&0x3C@12&0xFF=0xFF" -j DROP
-t raw -A PREROUTING -p tcp -m u32 --u32 "0>>22&0x3C@12&0xFF&0x03=0x03" -j DROP
# Drops TCP packets where the Window Size is exactly 32120 (0x7D78)
-t raw -A PREROUTING -p tcp -m u32 --u32 "0>>22&0x3C@12&0xFFFF=0x7D78" -j DROP
#game server match
-t raw -A PREROUTING -p udp --dport 27015 -m u32 --u32 "28=0x17EBF72A" -j DROP
# Drops UDP port 53 packets matching the hex footprint of an ANY request strings
-t raw -A PREROUTING -p udp --dport 53 -m u32 --u32 "0>>22&0x3C@8&0xFFFFFFFF=0x0000FF00" -j DROP
-A INPUT -p tcp -m multiport --dports 8080,3128,1080,8118 -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i wlo1 -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -p udp -m udp --dport 67 -j DROP
-A INPUT -p udp -m udp --sport 67 -j DROP
-A INPUT -s 127.0.0.0/8 ! -i lo -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 10 --name PORTSCAN --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m recent --set --name PORTSCAN --mask 255.255.255.255 --rsource
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -s 10.0.0.0/8 -i enp3s0 -j DROP
-A INPUT -s 172.16.0.0/12 -i enp3s0 -j DROP
-A INPUT -s 192.168.0.0/16 -i enp3s0 -j DROP
-A INPUT -s 169.254.0.0/16 -i enp3s0 -j DROP
-A INPUT -s 224.0.0.0/4 -i enp3s0 -j DROP
-A INPUT -s 240.0.0.0/4 -i enp3s0 -j DROP
-A INPUT -s 10.0.0.0/8 -i wlo1 -j DROP
-A INPUT -s 172.16.0.0/12 -i wlo1 -j DROP
-A INPUT -s 192.168.0.0/16 -i wlo1 -j DROP
-A INPUT -s 169.254.0.0/16 -i wlo1 -j DROP
-A INPUT -s 224.0.0.0/4 -i wlo1 -j DROP
-A INPUT -s 240.0.0.0/4 -i wlo1 -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o enp3s0 -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -o wlo1 -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -d 127.0.0.0/8 ! -o lo -j DROP
COMMIT
# Completed on Sun Sep 20 14:46:49 2026
